# DemoNavi

./: .gitignore  CMakeLists.txt  DemoNavi.qmlproject  README.md
BaseComponents/: CMakeLists.txt
BaseComponents/res/: BaseButton.qml  BaseCombobox.qml  BaseComponent.qml  BaseListView.qml  BaseTextEdit.qml  BaseTreeView.qml  BaseView.qml  BaseWindow.qml  qmldir
BaseComponents/src/: QBaseView.cpp  QBaseView.h  cmnDef.h  viewDefs.h
BaseComponents/src/defines/: baseComponentsDefs.h
BaseComponents/src/handlers/: QBaseEventHandler.cpp  QBaseEventHandler.h  QButtonEventHandler.cpp  QButtonEventHandler.h  QComboBoxEventHandler.cpp  QComboBoxEventHandler.h  QListEventHandler.cpp  QListEventHandler.h  QTextEditEventHandler.cpp  QTextEditEventHandler.h  QViewEventHandler.cpp  QViewEventHandler.h  QWindowEventHandler.cpp  QWindowEventHandler.h
BaseComponents/src/logger/: CLogger.h
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/DemoNavi/: CMakeLists.txt  qmldir
imports/DemoNavi/designer/: plugin.metainfo
res/qml/: main.qml
res/qml/Components/: CustomTextEdit.qml  FlatButton.qml  IconTextEdit.qml  ListView.qml  Marker.qml  TabButton.qml  qmldir
res/qml/Views/: NaviHomeView.qml  SearchView.qml  qmldir
src/: DemoNavi.cpp  DemoNavi.h  import_qml_plugins.h  main.cpp
src/commonLibs/: CStrManager.h  QModuleManager.cpp  QNetworkManager.cpp  QNetworkManager.h
src/defs/: cmnDefs.h  viewDefs.h
src/modules/: ModuleEnum.h  QModuleFactory.cpp
src/modules/viewModule/: ViewControlModule.cpp  ViewControlModule.h
src/modules/viewModule/views/: AddGrowerView.cpp  AddGrowerView.h  NaviHomeView.cpp  NaviHomeView.h  SearchView.cpp  SearchView.h
